# advent-of-code-2025

./: .gitignore  README.md
day-1/: main.py  pyproject.toml
day-1/scripts/: main.py
day-1/src/day_1/: __init__.py  utils.py
day-1/tests/: test_utils.py
day-2/: pyproject.toml
day-2/src/day_2/: __init__.py  utils.py
day-2/tests/: test_utils.py
