[project]
name = "day-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "cw0", email = "cwilson8706@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
day-2 = "day_2:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
